fix: fixed alignment in desktop media query

--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,8 @@ button {
   .feature-one, .feature-two, .feature-three, .feature-four {
     width: 25%;
     float: left;
-    padding: 0 0 0 0;
+    text-align: left;
+    padding: 1.5em 0 1.5em 0em;
     margin: 0 0 0 0;
   }
 }
